--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.04
+date: Wed Jan 19 15:32:53 PST 2005
+changes:
+- Move use to require
+- Other slight tidies
+---
 version: 0.10
 date: Tue Jan 11 13:34:19 PST 2005
 changes:
