Import of CDENT/Kwiki-FetchRSS-0.05 from CPAN.
gitpan-cpan-distribution: Kwiki-FetchRSS
gitpan-cpan-version:      0.05
gitpan-cpan-path:         CDENT/Kwiki/Kwiki-FetchRSS-0.05.tar.gz
gitpan-cpan-author:       CDENT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.05
+date: Sun Jan 30 22:41:58 PST 2005
+changes:
+- Correct a bug in foreach loop in template that was causing duplicate output
+---
 version: 0.04
 date: Wed Jan 19 15:32:53 PST 2005
 changes:
