--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 ---
+version: 0.06
+date: Sun Feb 13 20:30:21 PST 2005
+changes:
+- Handle ill-formed or lengthless feeds better.
+---
 version: 0.05
 date: Sun Jan 30 22:41:58 PST 2005
 changes:
