--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
 ---
+version: 0.07
+date: Sun Mar 20 02:50:24 PST 2005
+changes:
+- ingy hub cleanups
+- improved testing
+- possibly deal with undef issue from socialtext-land
+---
 version: 0.06
 date: Sun Feb 13 20:30:21 PST 2005
 changes:
