Import of CDENT/Kwiki-FetchRSS-0.08 from CPAN.
gitpan-cpan-distribution: Kwiki-FetchRSS
gitpan-cpan-version:      0.08
gitpan-cpan-path:         CDENT/Kwiki/Kwiki-FetchRSS-0.08.tar.gz
gitpan-cpan-author:       CDENT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
 ---
+version: 0.08
+date: Mon Jun 27 22:34:41 PDT 2005
+changes:
+- Support Atom feeds by switching to XML::Feed
+- Clean up some formatting
+---
 version: 0.07
 date: Sun Mar 20 02:50:24 PST 2005
 changes:
